Update welding examples (#251)
* Add 'from_geometry' method to 'SpatialData'
* Add new plot function for spatial data

Co-authored-by: Cagtay Fabry <43667554+CagtayFabry@users.noreply.github.com>

--- a/tutorials/geometry_02_geometry.ipynb
+++ b/tutorials/geometry_02_geometry.ipynb
@@ -25,6 +25,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -43,6 +44,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -94,6 +96,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -119,6 +122,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -153,6 +157,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -176,6 +181,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -200,6 +206,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -249,6 +256,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -275,6 +283,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -285,8 +294,9 @@
    "outputs": [],
    "source": [
     "geometry = Geometry(profile=profile, trace=trace)\n",
-    "geometry.plot(profile_raster_width=Q_(1, \"cm\"),\n",
-    "              trace_raster_width=Q_(10, \"cm\"))\n",
+    "geometry.plot(profile_raster_width=Q_(0.25, \"cm\"),\n",
+    "              trace_raster_width=Q_(10, \"cm\"),\n",
+    "              show_wireframe=False)\n",
     "trace.plot(raster_width=Q_(1, \"cm\"), axes=plt.gca(), fmt=\"r-\")"
    ]
   },
@@ -330,6 +340,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -368,6 +379,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -383,7 +395,7 @@
     "                            )\n",
     "\n",
     "geometry_vp = Geometry(profile=v_profile,trace=trace)\n",
-    "geometry_vp.plot(profile_raster_width=Q_(1, \"cm\"),\n",
+    "geometry_vp.plot(profile_raster_width=Q_(0.25, \"cm\"),\n",
     "                 trace_raster_width=Q_(8, \"cm\"))"
    ]
   },
@@ -426,6 +438,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -457,6 +470,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -470,9 +484,16 @@
     "trace_custom_interp = Trace(LinearHorizontalTraceSegment(Q_(20, \"cm\")))\n",
     "geometry_custom_interp = Geometry(v_profile_custom_interp, trace_custom_interp)\n",
     "\n",
-    "geometry_custom_interp.plot(profile_raster_width=Q_(1, \"cm\"),\n",
+    "geometry_custom_interp.plot(profile_raster_width=Q_(0.25, \"cm\"),\n",
     "                            trace_raster_width=Q_(2, \"cm\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
