renamed utility modules to util

--- a/tutorials/GMAW_process.ipynb
+++ b/tutorials/GMAW_process.ipynb
@@ -148,8 +148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "buffer = weldx.asdf.utils._write_buffer(tree)\n",
-    "weldx.asdf.utils.notebook_fileprinter(buffer)"
+    "buffer = weldx.asdf.util._write_buffer(tree)\n",
+    "weldx.asdf.util.notebook_fileprinter(buffer)"
    ]
   },
   {
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = weldx.asdf.utils._read_buffer(buffer)"
+    "data = weldx.asdf.util._read_buffer(buffer)"
    ]
   }
  ],
