--- a/tutorials/custom_metadata.ipynb
+++ b/tutorials/custom_metadata.ipynb
@@ -18,7 +18,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "nbsphinx": "hidden"
+    "nbsphinx": "hidden",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -30,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start by by creating the sensor object as a `GenericEquipment`:"
+    "We start by creating the sensor object as a `GenericEquipment`:"
    ]
   },
   {
@@ -78,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx.asdf.utils import _write_buffer, notebook_fileprinter\n",
+    "from weldx.asdf.util import _write_buffer, notebook_fileprinter\n",
     "\n",
     "buffer = _write_buffer({\"sensor\": HKS_sensor})\n",
     "notebook_fileprinter(buffer)"
@@ -104,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx.asdf.utils import _read_buffer\n",
+    "from weldx.asdf.util import _read_buffer\n",
     "\n",
     "data = _read_buffer(buffer)\n",
     "display(data[\"sensor\"].wx_metadata)\n",
