--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -196,7 +196,7 @@
    "outputs": [],
    "source": [
     "tree = dict(test_v_groove=v_groove)\n",
-    "buffer = weldx.asdf.utils._write_buffer(tree)"
+    "buffer = weldx.asdf.util._write_buffer(tree)"
    ]
   },
   {
@@ -212,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weldx.asdf.utils.notebook_fileprinter(buffer)"
+    "weldx.asdf.util.notebook_fileprinter(buffer)"
    ]
   },
   {
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = weldx.asdf.utils._read_buffer(buffer)\n",
+    "data = weldx.asdf.util._read_buffer(buffer)\n",
     "data[\"test_v_groove\"]"
    ]
   },
