--- a/tutorials/measurement_example.ipynb
+++ b/tutorials/measurement_example.ipynb
@@ -25,20 +25,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import asdf\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pint\n",
     "import sympy\n",
-    "import xarray as xr\n",
-    "from matplotlib import pyplot as plt\n",
     "\n",
     "import weldx\n",
     "import weldx.measurement as msm\n",
     "import weldx.transformations as tf\n",
-    "import weldx.utility as ut\n",
     "from weldx import Q_\n",
-    "from weldx.asdf.extension import WeldxAsdfExtension, WeldxExtension"
+    "from weldx import util"
    ]
   },
   {
@@ -74,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "I_ts = ut.sine(f=Q_(10, \"1/s\"), amp=Q_(20, \"A\"), bias=Q_(300, \"A\"))\n",
+    "I_ts = util.sine(f=Q_(10, \"1/s\"), amp=Q_(20, \"A\"), bias=Q_(300, \"A\"))\n",
     "I = I_ts.interp_time(time)\n",
     "I[\"time\"] = I[\"time\"]+pd.Timestamp(\"2020-01-01\")\n",
     "\n",
@@ -88,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "U_ts = ut.sine(f=Q_(10, \"1/s\"), amp=Q_(3, \"V\"), bias=Q_(40, \"V\"), phase=Q_(0.1, \"rad\"))\n",
+    "U_ts = util.sine(f=Q_(10, \"1/s\"), amp=Q_(3, \"V\"), bias=Q_(40, \"V\"), phase=Q_(0.1, \"rad\"))\n",
     "U = U_ts.interp_time(time)\n",
     "U[\"time\"] = U[\"time\"]+pd.Timestamp(\"2020-01-01\")\n",
     "\n",
@@ -477,7 +472,7 @@
     "    # \"data_sources\": sources,\n",
     "    # \"data_processors\": processors,\n",
     "}\n",
-    "buffer = weldx.asdf.utils._write_buffer(tree)"
+    "buffer = weldx.asdf.util._write_buffer(tree)"
    ]
   },
   {
@@ -486,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weldx.asdf.utils.notebook_fileprinter(buffer)"
+    "weldx.asdf.util.notebook_fileprinter(buffer)"
    ]
   },
   {
@@ -495,7 +490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = weldx.asdf.utils._read_buffer(buffer)"
+    "data = weldx.asdf.util._read_buffer(buffer)"
    ]
   }
  ],
