--- a/tutorials/timeseries_01.ipynb
+++ b/tutorials/timeseries_01.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "import weldx\n",
     "import weldx.transformations as tf\n",
-    "import weldx.utility as ut\n",
+    "import weldx.util \n",
     "\n",
     "from weldx.asdf.extension import WeldxAsdfExtension, WeldxExtension\n",
     "from weldx.asdf.tags.weldx.core.mathematical_expression import MathematicalExpression\n",
