--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -296,8 +296,8 @@
     "    with out:\n",
     "        fig = plt.figure()\n",
     "        try:\n",
-    "            fig.canvas.layout.height = str(window_size) + \"px\"\n",
-    "            fig.canvas.layout.width = str(window_size) + \"px\"\n",
+    "            fig.canvas.layoutil.height = str(window_size) + \"px\"\n",
+    "            fig.canvas.layoutil.width = str(window_size) + \"px\"\n",
     "        except:\n",
     "            pass\n",
     "        gs = fig.add_gridspec(3, 2)\n",
