--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -65,7 +65,7 @@
     "import weldx\n",
     "import weldx.geometry as geo\n",
     "import weldx.transformations as tf\n",
-    "import weldx.utility as ut\n",
+    "import weldx.util \n",
     "import weldx.visualization as vis\n",
     "from weldx import Q_\n",
     "from weldx.transformations import LocalCoordinateSystem as lcs\n",
@@ -574,7 +574,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "buffer = weldx.asdf.utils._write_buffer(tree)"
+    "buffer = weldx.asdf.util._write_buffer(tree)"
    ]
   },
   {
@@ -583,7 +583,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weldx.asdf.utils.notebook_fileprinter(buffer)"
+    "weldx.asdf.util.notebook_fileprinter(buffer)"
    ]
   }
  ],
