--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -65,7 +65,7 @@
     "import weldx\n",
     "import weldx.geometry as geo\n",
     "import weldx.transformations as tf\n",
-    "import weldx.utility as ut\n",
+    "from weldx import util\n",
     "import weldx.visualization as vis\n",
     "from weldx import Q_\n",
     "from weldx.core import MathematicalExpression, TimeSeries\n",
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_sine = ut.sine(f=Q_(0.5 * 2 * np.pi, \"Hz\"), amp=Q_([[0, 0.75, 0]], \"mm\"))"
+    "ts_sine = util.sine(f=Q_(0.5 * 2 * np.pi, \"Hz\"), amp=Q_([[0, 0.75, 0]], \"mm\"))"
    ]
   },
   {
@@ -290,7 +290,7 @@
    "outputs": [],
    "source": [
     "t = pd.timedelta_range(start=t_start, end=t_end, freq=\"10ms\")\n",
-    "ts_sine_data = ut.lcs_coords_from_ts(ts_sine, t)"
+    "ts_sine_data = util.lcs_coords_from_ts(ts_sine, t)"
    ]
   },
   {
@@ -507,10 +507,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_sine = ut.sine(f=Q_(1 / 8 * 2 * np.pi, \"Hz\"), amp=Q_([[0, 0, 1]], \"mm\"))\n",
+    "ts_sine = util.sine(f=Q_(1 / 8 * 2 * np.pi, \"Hz\"), amp=Q_([[0, 0, 1]], \"mm\"))\n",
     "\n",
     "t = pd.timedelta_range(start=\"0s\", end=\"8s\", freq=\"25ms\")\n",
-    "ts_sine_data = ut.lcs_coords_from_ts(ts_sine, t)\n",
+    "ts_sine_data = util.lcs_coords_from_ts(ts_sine, t)\n",
     "tcp_sine2 = lcs(coordinates=ts_sine_data)"
    ]
   },
