--- a/tutorials/experiment_design_01.ipynb
+++ b/tutorials/experiment_design_01.ipynb
@@ -81,7 +81,7 @@
     "# importing the weldx package with prevalent default abbreviations\n",
     "import weldx\n",
     "import weldx.geometry as geo\n",
-    "import weldx.utility as ut\n",
+    "import weldx.util as util\n",
     "from weldx import Q_\n",
     "from weldx.transformations import LocalCoordinateSystem as LCS\n",
     "from weldx.welding.groove.iso_9692_1 import get_groove"
@@ -246,8 +246,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sine_y = ut.sine(f=Q_(1, \"Hz\"), amp=Q_([[0, 1, 0]], \"mm\"))\n",
-    "coords = ut.lcs_coords_from_ts(sine_y, time)\n",
+    "sine_y = util.sine(f=Q_(1, \"Hz\"), amp=Q_([[0, 1, 0]], \"mm\"))\n",
+    "coords = util.lcs_coords_from_ts(sine_y, time)\n",
     "csm.add_cs(\n",
     "    coordinate_system_name=\"tcp_sine_y\",\n",
     "    reference_system_name=\"tcp_wire\",\n",
@@ -268,8 +268,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sine_z = ut.sine(f=Q_(1, \"Hz\"), amp=Q_([[0, 0, 2]], \"mm\"), bias=Q_([0, 0, 0], \"mm\"))\n",
-    "coords = ut.lcs_coords_from_ts(sine_z, time)\n",
+    "sine_z = util.sine(f=Q_(1, \"Hz\"), amp=Q_([[0, 0, 2]], \"mm\"), bias=Q_([0, 0, 0], \"mm\"))\n",
+    "coords = util.lcs_coords_from_ts(sine_z, time)\n",
     "csm.add_cs(\n",
     "    coordinate_system_name=\"tcp_sine_z\",\n",
     "    reference_system_name=\"tcp_wire\",\n",
