--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -124,6 +124,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### calculating groove cross sectional area\n",
+    "An approximation of the groove cross sectional area can be calculated via the `cross_sect_area` property"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(v_groove.cross_sect_area)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Using plot on a profile constructed by a groove\n",
     "\n",
     "We can visualize the profile by simply calling the `plot()` function of the groove object. Carefully note the labeling (yz) and orientation of the axis. The plot shows the groove as seen along the negative x-axis (against the welding direction)."
