Remove most types from new MeasurementChain

--- a/scripts/draft_example.ipynb
+++ b/scripts/draft_example.ipynb
@@ -3,66 +3,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "desirable-homeless",
+   "id": "limited-industry",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx.measurement import MeasurementChainGraph, Source, Signal, Error, DataTransformation"
+    "from weldx.measurement import MeasurementChainGraph, Error"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "clinical-knock",
+   "id": "great-atlanta",
    "metadata": {},
    "outputs": [],
    "source": [
-    "src_01 = Source(\n",
-    "        name=\"Current Sensor\",\n",
-    "        output_signal=Signal(\"analog\", \"V\", data=None),\n",
-    "        error=Error(1337.42),\n",
-    "    )"
+    "mc = MeasurementChainGraph(name=\"Current measurement chain\", \n",
+    "                           source_name=\"Current Sensor\", \n",
+    "                           source_error=Error(13.37), \n",
+    "                           output_signal_type=\"analog\", \n",
+    "                           output_signal_unit=\"V\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "liquid-scenario",
+   "id": "consolidated-awareness",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc = MeasurementChainGraph(\"test\", src_01)"
+    "mc.add_transformation(\"AD conversion current measurement\", \n",
+    "                      error=Error(0.97), \n",
+    "                      output_signal_type=\"digital\", \n",
+    "                      output_signal_unit = \"\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "according-aluminum",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dt_01 = DataTransformation(\n",
-    "        name=\"AD conversion current measurement\",\n",
-    "        input_signal=Signal(\"analog\", \"V\", data=None),\n",
-    "        output_signal=Signal(\"digital\", \"V\", data=None),\n",
-    "        error=Error(999.0),\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "parliamentary-insurance",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mc.add_transformation(name=dt_01.name,transformation=dt_01)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "homeless-pantyhose",
+   "id": "grave-uganda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,18 +50,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "buried-master",
+   "id": "silent-protection",
    "metadata": {},
    "outputs": [],
    "source": [
     "mc._graph.edges"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ceramic-summary",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
