--- a/tutorials/geometry_02_geometry.ipynb
+++ b/tutorials/geometry_02_geometry.ipynb
@@ -216,7 +216,7 @@
    },
    "outputs": [],
    "source": [
-    "lcs_rot = LocalCoordinateSystem(tf.rotation_matrix_y(Q_(45, \"degree\")))\n",
+    "lcs_rot = LocalCoordinateSystem(tf.WXRotation(\"y\",Q_(45, \"degree\")).as_matrix())\n",
     "trace_rot = Trace([line_segment, arc_segment,line_segment], lcs_rot)\n",
     "trace_rot.plot(raster_width=Q_(2, \"cm\"))"
    ]
