--- a/tutorials/measurement_example.ipynb
+++ b/tutorials/measurement_example.ipynb
@@ -424,7 +424,7 @@
     "    coordinates=Q_(np.asarray([100, 75, 0]), \"mm\")\n",
     ")\n",
     "lcs_flange_in_root = tf.LocalCoordinateSystem(\n",
-    "    orientation=tf.rotation_matrix_x(np.pi / 2),\n",
+    "    orientation=tf.WXRotation(\"x\",np.pi / 2).as_matrix(),\n",
     "    coordinates=Q_(np.asarray([115, -10, 140]), \"mm\"),\n",
     ")\n",
     "lcs_torch_in_flange = tf.LocalCoordinateSystem(\n",
