--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -13,7 +13,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "nbsphinx": "hidden"
+    "nbsphinx": "hidden",
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
@@ -509,16 +512,16 @@
    "source": [
     "parent_time = pd.TimedeltaIndex([1, 6], \"D\")\n",
     "parent_coords = [[1, -1, 0], [0, -1, 0]]\n",
-    "parent_orientation = tf.rotation_matrix_z([0, np.pi / 2])\n",
+    "parent_orientation = - tf.WXRotation.from_euler(\"z\",[0, np.pi / 2]).as_matrix()\n",
     "\n",
     "child_time = pd.TimedeltaIndex([2, 5], \"D\")\n",
     "child_coords = [0, 2, 0]\n",
-    "child_orientation = tf.rotation_matrix_z([0, np.pi / 2])\n",
+    "child_orientation = tf.WXRotation.from_euler(\"z\",[0, np.pi / 2]).as_matrix()\n",
     "\n",
     "\n",
     "childchild_time = pd.TimedeltaIndex([3, 4], \"D\")\n",
     "childchild_coords = [2, 0, 0]\n",
-    "childchild_orientation = tf.rotation_matrix_z([0, np.pi / 2])\n",
+    "childchild_orientation = tf.WXRotation.from_euler(\"z\",[0, np.pi / 2]).as_matrix()\n",
     "\n",
     "\n",
     "csm_tdp = tf.CoordinateSystemManager(\"root\")\n",
@@ -914,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
