--- a/tutorials/measurement_example.ipynb
+++ b/tutorials/measurement_example.ipynb
@@ -424,7 +424,7 @@
     "    coordinates=Q_(np.asarray([100, 75, 0]), \"mm\")\n",
     ")\n",
     "lcs_flange_in_root = tf.LocalCoordinateSystem(\n",
-    "    orientation=tf.WXRotation(\"x\",np.pi / 2).as_matrix(),\n",
+    "    orientation=tf.WXRotation.from_euler(\"x\",np.pi / 2).as_matrix(),\n",
     "    coordinates=Q_(np.asarray([115, -10, 140]), \"mm\"),\n",
     ")\n",
     "lcs_torch_in_flange = tf.LocalCoordinateSystem(\n",
@@ -510,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
