--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -99,7 +99,7 @@
     "lcs_01 = tf.LocalCoordinateSystem(coordinates=[2, 4, -1])\n",
     "\n",
     "# create a rotated coordinate system using a rotation matrix as basis\n",
-    "rotation_matrix = tf.rotation_matrix_z(np.pi / 3)\n",
+    "rotation_matrix = tf.WXRotation.from_euler(\"z\",np.pi / 3).as_matrix()\n",
     "lcs_02 = tf.LocalCoordinateSystem(orientation=rotation_matrix, coordinates=[0, 0, 3])"
    ]
   },
@@ -878,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
