Fix last notebooks

--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -321,9 +321,9 @@
     "def get_orientation_and_location(t_x, t_y, t_z, r_x, r_y, r_z):\n",
     "    rot_angles = np.array([r_x, r_y, r_z], float) / 180 * np.pi\n",
     "\n",
-    "    rot_x = tf.rotation_matrix_x(rot_angles[0])\n",
-    "    rot_y = tf.rotation_matrix_y(rot_angles[1])\n",
-    "    rot_z = tf.rotation_matrix_z(rot_angles[2])\n",
+    "    rot_x = tf.WXRotation.from_euler(\"x\", rot_angles[0]).as_matrix()\n",
+    "    rot_y = tf.WXRotation.from_euler(\"y\", rot_angles[1]).as_matrix()\n",
+    "    rot_z = tf.WXRotation.from_euler(\"z\", rot_angles[2]).as_matrix()\n",
     "\n",
     "    orientation = np.matmul(rot_z, np.matmul(rot_y, rot_x))\n",
     "    location = [t_x, t_y, t_z]\n",
