--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -99,7 +99,7 @@
     "lcs_01 = tf.LocalCoordinateSystem(coordinates=[2, 4, -1])\n",
     "\n",
     "# create a rotated coordinate system using a rotation matrix as basis\n",
-    "rotation_matrix = tf.rotation_matrix_z(np.pi / 3)\n",
+    "rotation_matrix = tf.WXRotation.from_euler(\"z\",np.pi / 3).as_matrix()\n",
     "lcs_02 = tf.LocalCoordinateSystem(orientation=rotation_matrix, coordinates=[0, 0, 3])"
    ]
   },
@@ -321,9 +321,9 @@
     "def get_orientation_and_location(t_x, t_y, t_z, r_x, r_y, r_z):\n",
     "    rot_angles = np.array([r_x, r_y, r_z], float) / 180 * np.pi\n",
     "\n",
-    "    rot_x = tf.rotation_matrix_x(rot_angles[0])\n",
-    "    rot_y = tf.rotation_matrix_y(rot_angles[1])\n",
-    "    rot_z = tf.rotation_matrix_z(rot_angles[2])\n",
+    "    rot_x = tf.WXRotation.from_euler(\"x\", rot_angles[0]).as_matrix()\n",
+    "    rot_y = tf.WXRotation.from_euler(\"y\", rot_angles[1]).as_matrix()\n",
+    "    rot_z = tf.WXRotation.from_euler(\"z\", rot_angles[2]).as_matrix()\n",
     "\n",
     "    orientation = np.matmul(rot_z, np.matmul(rot_y, rot_x))\n",
     "    location = [t_x, t_y, t_z]\n",
@@ -878,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
