--- a/scripts/draft_example.ipynb
+++ b/scripts/draft_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "limited-industry",
+   "id": "fleet-gathering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "great-atlanta",
+   "id": "third-seller",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "consolidated-awareness",
+   "id": "medium-sword",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,22 +40,132 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "grave-uganda",
+   "id": "sustainable-poetry",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc.add_signal_data(\"my_data\",[1,2,3])"
+    "mc.add_transformation(\"Calibration\", \n",
+    "                      error=Error(0.1), \n",
+    "                      output_signal_type=\"digital\", \n",
+    "                      output_signal_unit = \"A\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "silent-protection",
+   "id": "stuffed-specialist",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc.add_signal_data(\"my_data\", [1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "universal-organization",
    "metadata": {},
    "outputs": [],
    "source": [
     "mc._graph.edges"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "local-boston",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc._graph.nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "parental-validation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc._graph.edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "raised-august",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc.get_data(\"my_data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "advanced-pressure",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trf_cal = mc.get_transformation(\"Calibration\")\n",
+    "trf_cal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ranging-divorce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_2 = MeasurementChainGraph(name=\"Other measurement chain\", \n",
+    "                           source_name=\"Current Sensor\", \n",
+    "                           source_error=Error(13.3), \n",
+    "                           output_signal_type=\"analog\", \n",
+    "                           output_signal_unit=\"V\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "standing-warrior",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    mc_2.attach_transformation(trf_cal)\n",
+    "except ValueError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "employed-scenario",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_2.attach_transformation(mc.get_transformation(\"AD conversion current measurement\"))\n",
+    "mc_2.attach_transformation(trf_cal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "approximate-dragon",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_2._graph.nodes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "turkish-character",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
