update example schema & notebook

--- a/scripts/graph_demo.ipynb
+++ b/scripts/graph_demo.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "surrounded-visitor",
    "metadata": {},
    "source": [
     "# Graph"
@@ -10,6 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "documented-daughter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "english-volunteer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +38,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cathedral-enhancement",
+   "metadata": {},
+   "source": [
+    "## Minimal example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "uniform-hospital",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# minimal example\n",
+    "G = nx.DiGraph()\n",
+    "G.add_nodes_from((\"A\",\"B\",\"C\"))\n",
+    "G.add_edges_from(\n",
+    "    [(\"C\", \"B\"), (\"B\", \"A\")]\n",
+    ")\n",
+    "buff = weldx.asdf.util.write_buffer(dict(graph=G))\n",
+    "weldx.asdf.util.notebook_fileprinter(buff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "infectious-fashion",
+   "metadata": {},
+   "source": [
+    "### complex example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "brilliant-battery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,12 +83,39 @@
     "G.add_edges_from(\n",
     "    [(\"A\", \"B\"), (\"A\", \"C\"), (\"A\", \"F\"), (\"D\", \"C\"), (\"B\", \"H\"), (\"X\", \"A\"), (rid, \"D\")]\n",
     ")\n",
+    "nx.draw(G, with_labels=True)\n",
+    "buff = weldx.asdf.util.write_buffer(dict(graph=G))\n",
+    "weldx.asdf.util.asdf_json_repr(buff, (\"graph\",))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "decent-print",
+   "metadata": {},
+   "source": [
+    "## Measurement Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "diverse-watts",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rid = uuid.uuid4()\n",
+    "\n",
+    "G = nx.DiGraph()\n",
+    "G.add_edges_from(\n",
+    "    [(\"A\", \"B\"), (\"B\", \"C\"), (\"C\", \"D\")]\n",
+    ")\n",
     "nx.draw(G, with_labels=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "corrected-school",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "extra-minister",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "approximate-mouth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "offensive-hurricane",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "billion-trouble",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "grave-lobby",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,16 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G2 = tree[\"measurement_chain\"].graph\n",
-    "nx.draw(G2, with_labels=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "id": "second-harrison",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "acoustic-crest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,42 +200,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "considered-bennett",
    "metadata": {},
    "outputs": [],
    "source": [
     "for edge in G.edges:\n",
     "    assert G.edges[edge] == G2.edges[edge]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import uuid\n",
-    "import weldx\n",
-    "r = uuid.uuid4()\n",
-    "\n",
-    "buff = weldx.asdf.util.write_buffer(dict(measurement_chain=uuid.uuid4()))\n",
-    "weldx.asdf.util.asdf_json_repr(buff, (\"measurement_chain\",))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weldx.asdf.util.notebook_fileprinter(buff)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
