add cyclic graph support

--- a/scripts/graph_demo.ipynb
+++ b/scripts/graph_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "surrounded-visitor",
+   "id": "utility-electricity",
    "metadata": {},
    "source": [
     "# Graph"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "documented-daughter",
+   "id": "loose-spare",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "english-volunteer",
+   "id": "first-cream",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "august-banner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cathedral-enhancement",
+   "id": "binary-compiler",
    "metadata": {},
    "source": [
     "## Minimal example"
@@ -48,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "uniform-hospital",
+   "id": "critical-funeral",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +75,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infectious-fashion",
+   "id": "based-allah",
+   "metadata": {},
+   "source": [
+    "## cycle example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "royal-addition",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# minimal example\n",
+    "G = nx.DiGraph()\n",
+    "G.add_nodes_from((\"A\",\"B\",\"C\"))\n",
+    "G.add_edges_from(\n",
+    "    [(\"C\", \"B\"), (\"B\", \"A\"),(\"C\",\"A\")]\n",
+    ")\n",
+    "buff = weldx.asdf.util.write_buffer(dict(graph=G))\n",
+    "weldx.asdf.util.notebook_fileprinter(buff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "variable-saver",
    "metadata": {},
    "source": [
     "### complex example"
@@ -73,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "brilliant-battery",
+   "id": "mounted-savings",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decent-print",
+   "id": "plastic-indication",
    "metadata": {},
    "source": [
     "## Measurement Example"
@@ -99,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "diverse-watts",
+   "id": "tight-packaging",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "corrected-school",
+   "id": "viral-campaign",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extra-minister",
+   "id": "genetic-arlington",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "approximate-mouth",
+   "id": "modern-waters",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "offensive-hurricane",
+   "id": "billion-conversation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "billion-trouble",
+   "id": "diverse-journey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "grave-lobby",
+   "id": "under-revelation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "second-harrison",
+   "id": "permanent-velvet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acoustic-crest",
+   "id": "uniform-limitation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "considered-bennett",
+   "id": "divine-arrangement",
    "metadata": {},
    "outputs": [],
    "source": [
