--- a/scripts/graph_demo.ipynb
+++ b/scripts/graph_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "utility-electricity",
+   "id": "paperback-briefs",
    "metadata": {},
    "source": [
     "# Graph"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "loose-spare",
+   "id": "amazing-munich",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "first-cream",
+   "id": "daily-birth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "august-banner",
+   "id": "starting-third",
    "metadata": {},
    "outputs": [],
    "source": [
     "import uuid\n",
     "\n",
     "import networkx as nx\n",
-    "\n",
     "import weldx\n",
     "from weldx.asdf.tags.weldx.core.graph import (\n",
     "    MeasurementChain,\n",
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "binary-compiler",
+   "id": "affecting-meter",
    "metadata": {},
    "source": [
     "## Minimal example"
@@ -59,23 +58,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "critical-funeral",
+   "id": "impossible-mailing",
    "metadata": {},
    "outputs": [],
    "source": [
     "# minimal example\n",
     "G = nx.DiGraph()\n",
-    "G.add_nodes_from((\"A\",\"B\",\"C\"))\n",
-    "G.add_edges_from(\n",
-    "    [(\"C\", \"B\"), (\"B\", \"A\")]\n",
-    ")\n",
+    "G.add_nodes_from((\"A\", \"B\", \"C\"))\n",
+    "G.add_edges_from([(\"C\", \"B\"), (\"B\", \"A\")])\n",
     "buff = weldx.asdf.util.write_buffer(dict(graph=G))\n",
     "weldx.asdf.util.notebook_fileprinter(buff)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "based-allah",
+   "id": "derived-charlotte",
    "metadata": {},
    "source": [
     "## cycle example"
@@ -84,23 +81,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "royal-addition",
+   "id": "altered-demographic",
    "metadata": {},
    "outputs": [],
    "source": [
     "# minimal example\n",
     "G = nx.DiGraph()\n",
-    "G.add_nodes_from((\"A\",\"B\",\"C\"))\n",
-    "G.add_edges_from(\n",
-    "    [(\"C\", \"B\"), (\"B\", \"A\"),(\"C\",\"A\")]\n",
-    ")\n",
+    "G.add_nodes_from((\"A\", \"B\", \"C\"))\n",
+    "G.add_edges_from([(\"C\", \"B\"), (\"B\", \"A\"), (\"C\", \"A\")])\n",
     "buff = weldx.asdf.util.write_buffer(dict(graph=G))\n",
     "weldx.asdf.util.notebook_fileprinter(buff)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "variable-saver",
+   "id": "durable-street",
    "metadata": {},
    "source": [
     "### complex example"
@@ -109,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mounted-savings",
+   "id": "genetic-semiconductor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "plastic-indication",
+   "id": "toxic-accent",
    "metadata": {},
    "source": [
     "## Measurement Example"
@@ -135,23 +130,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tight-packaging",
+   "id": "sustained-printing",
    "metadata": {},
    "outputs": [],
    "source": [
     "rid = uuid.uuid4()\n",
     "\n",
     "G = nx.DiGraph()\n",
-    "G.add_edges_from(\n",
-    "    [(\"A\", \"B\"), (\"B\", \"C\"), (\"C\", \"D\")]\n",
-    ")\n",
+    "G.add_edges_from([(\"A\", \"B\"), (\"B\", \"C\"), (\"C\", \"D\")])\n",
     "nx.draw(G, with_labels=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "viral-campaign",
+   "id": "communist-tunnel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "genetic-arlington",
+   "id": "correct-nickel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modern-waters",
+   "id": "angry-replacement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "billion-conversation",
+   "id": "stylish-going",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "diverse-journey",
+   "id": "spatial-mentor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "under-revelation",
+   "id": "wooden-quantum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "permanent-velvet",
+   "id": "requested-flight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "uniform-limitation",
+   "id": "suffering-weekend",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "divine-arrangement",
+   "id": "quick-emission",
    "metadata": {},
    "outputs": [],
    "source": [
